# gi-repository-rs

./: .gitignore  Cargo.toml  Gir.toml  generate.sh  setup.sh
gi-repository-sys/: Cargo.toml  Gir.toml  build.rs
gi-repository-sys/src/: lib.rs
gi-repository-sys/tests/: abi.rs  constant.c  layout.c  manual.h
gir-files/: GIRepository-2.0.gir  GLib-2.0.gir  GObject-2.0.gir  fix.sh
src/: base_info.rs  lib.rs  typelib.rs
src/auto/: alias.rs  enums.rs  flags.rs  mod.rs  repository.rs  versions.txt
