[package]
name = "gi-repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.16.3"
glib-sys = "0.16.3"

[dependencies.ffi]
package = "gi-repository-sys"
path = "./gi-repository-sys/"


# [dependencies.glib]
# git = "https://github.com/gtk-rs/gtk-rs-core/tree/master/glib"
# [dependencies.glib-sys]
# git = "https://github.com/gtk-rs/gtk-rs-core/tree/master/glib/sys"