[package]
name = "gi-repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
bitflags = "1.0"

[dependencies.ffi]
package = "gi-repository-sys"
path = "./gi-repository-sys/"


[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core/"
[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core/"

[features]
dox = ["glib/dox", "ffi/dox"]