[package]
name = "gi-repository-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"
repository = "https://github.com/Megadash452/gi-repository-rs"
description = "FFI bindings to libgirepository-2.0"
license = "MIT"

[package.metadata.system-deps.gobject_introspection_1_0]
name = "gobject-introspection-1.0"
version = "1.72"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gi_repository_sys"

[dependencies]
libc = "0.2"
# glib = { version = "0.16.3", package = "glib-sys"}
# gobject = { version = "0.16.3", package = "gobject-sys"}

[dependencies.glib]
# package = "glib-sys"
version = "0.17.0"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
# package = "gobject-sys"
version = "0.17.0"
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = ["glib/dox", "gobject/dox"]
